--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Vanilla JS Drum Kit</title>
+    <title>Alphabet sound</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Tillana:wght@700&display=swap" rel="stylesheet">  <link rel="stylesheet" href="style.css">
   </head>
